# tx-guard

./: .gitignore  Cargo.toml  LICENSE  README.md  trace.txt
src/: account.rs  csv.rs  lib.rs  main.rs  tx.rs
testdata/: transactions.csv  transactions_amount_with_more_digits.csv  transactions_exaples.csv  transactions_random_100_000.csv  transactions_random_10_000.csv  transactions_random_1_000.csv
tests/: csv.rs  output.rs  transactions.csv  transactions_wrong_amount_type.csv  transactions_wrong_client_id_type.csv  transactions_wrong_tx_id_type.csv  transactions_wrong_type.csv  tx.rs
